--- a/engage/css/EngageWithus.css
+++ b/engage/css/EngageWithus.css
@@ -6,6 +6,273 @@
 a{
   text-decoration: none;
 }
+
+.connect{
+  position: absolute;
+  right: -504px;
+  width: 504px;
+  z-index: 1;
+  height: 900px;
+  background-color: #e2e8f0;
+  display: none;
+}
+.objects{
+  width: 50%;
+  height: 50%;
+  margin: auto;
+  align-items: center;
+  vertical-align: middle;
+  margin-top: 40%;
+  
+}
+
+.closekey{
+  /* margin-left: auto; */
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  width: fit-content;
+  /* margin: 30px; */
+}
+
+.home-section1__hero-title31.layout {
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 57.33px;
+line-height: 67px;
+display: flex;
+align-items: center;
+text-align: center;
+
+/* Primary blue */
+color: #0F75BC;
+
+  position: relative;
+  /* margin-top: 300px; */
+  margin: 20px auto;
+  /* top: 242px; */
+  height: 67px;
+  width: 135px;
+  
+}
+
+.home-section1__highlights63.layout {
+  position: relative;
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 19.2px;
+line-height: 24px;
+/* identical to box height, or 125% */
+
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #000000;
+  /* top: 309px; */
+  margin: 20px auto;
+  height: 24px;
+  width: 113px;
+  margin: auto;
+  /* right: -625px; */
+}
+
+.latestupdate{
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #000000;
+  margin: 50px auto;
+  text-align: center;
+}
+
+.home-section1__block55.layout{
+  border: 1px solid;
+  padding: 10px;
+  margin: 0px auto;
+  margin-top: 30%;
+  width: fit-content;
+  color: #000000;
+  
+}
+
+.home-section1__block51.layout {
+  position: absolute;
+  visibility: hidden;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+  width: 200px;
+  right: 40px;
+  border-radius: 20px;
+  background-color: #ffffff;
+  margin: 91px 34.5% 0px 53.4%;
+}
+.home-section1__block52 {
+  display: flex;
+  flex-direction: column;
+}
+.home-section1__block52.layout {
+  position: relative;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+  margin: 16px 24px;
+}
+.home-section1__paragraph-body-box {
+  display: flex;
+  align-items: center;
+}
+.home-section1__paragraph-body-box.layout {
+  position: relative;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+}
+.home-section1__paragraph-body {
+  overflow: visible;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin: 0px;
+  font: 500 13.3299999237px/1.2 "Montserrat", Helvetica, Arial, serif;
+  color: black;
+  letter-spacing: 0px;
+  white-space: pre-wrap;
+}
+.home-section1__paragraph-body1 {
+  display: flex;
+  align-items: center;
+  font: 500 13.3299999237px/1.2 "Montserrat", Helvetica, Arial, serif;
+  color: black;
+  letter-spacing: 0px;
+}
+.home-section1__paragraph-body1.layout {
+  position: relative;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+  margin: 16px 0px 0px;
+}
+.home-section1__paragraph-body2 {
+  display: flex;
+  align-items: center;
+  font: 500 13.3299999237px/1.2 "Montserrat", Helvetica, Arial, serif;
+  color: black;
+  letter-spacing: 0px;
+}
+.home-section1__paragraph-body2.layout {
+  position: relative;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+  margin: 16px 0px 0px;
+}
+
+
+
+.home-section1__block53.layout {
+  visibility: hidden;
+  position: absolute;
+  top: 43px;
+  height: 112px;
+  left: 37%;
+  width: 189px;
+  min-width: 189px;
+  border-radius: 10px;
+  background-color: white;
+}
+.home-section1__block53.layout:hover {
+  visibility: visible;
+}
+.home-section1__block54.layout {
+  display: flex;
+
+  position: relative;
+  width: 100%;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+  margin: 16px 24px 0px;
+}
+.home-section1__paragraph-body3.layout {
+  position: relative;
+  flex: 0 0 auto;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+}
+.home-section1__block54-spacer {
+  flex: 0 1 68px;
+}
+.home-section1__block54-item {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  flex: 0 1 6px;
+}
+.home-section1__image42 {
+  background: var(--src) center center/contain no-repeat;
+}
+.home-section1__image42.layout {
+  position: relative;
+  height: 10px;
+  width: 6px;
+  min-width: 6px;
+  margin: 3px 0px;
+}
+.home-section1__paragraph-body4 {
+  display: flex;
+  align-items: center;
+  font: 500 13.3299999237px/1.2 "Montserrat", Helvetica, Arial, serif;
+  color: black;
+  letter-spacing: 0px;
+}
+.home-section1__paragraph-body4.layout {
+  position: relative;
+  flex: 0 0 auto;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+}
+.home-section1__block54-spacer1 {
+  flex: 0 1 70px;
+}
+.home-section1__block54.layout1 {
+  display: flex;
+  position: relative;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+  margin: 16px 24px;
+}
+.home-section1__paragraph-body5 {
+  display: flex;
+  align-items: center;
+  font: 500 13.3299999237px/1.2 "Montserrat", Helvetica, Arial, serif;
+  color: black;
+  letter-spacing: 0px;
+}
+.home-section1__paragraph-body5.layout {
+  position: relative;
+  flex: 0 0 auto;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+}
+.home-section1__block54-spacer2 {
+  flex: 0 1 76px;
+}
+
+
+
+
 .engage-withus-main.layout {
   position: relative;
   overflow: hidden;
